# thrift-asyncio

./: .gitignore
.github/workflows/: compiler.yml
compiler/: CMakeLists.txt  Makefile.am  README.md
compiler/src/thrift/: thriftl.ll  thrifty.yy  version.h
compiler/src/thrift/generate/: t_py_generator.cc
compiler/src/thrift/parse/: t_function.h
lib/: MANIFEST.in  setup.py
lib/scripts/: build  clean
lib/src/aio/: TAsyncioThrift.py
lib/src/aio/protocol/: TAsyncioBinaryProtocol.py  TAsyncioCompactProtocol.py
lib/src/aio/transport/: TAsyncioTransport.py
lib/src/protocol/: TCompactProtocol.py
lib/thriftx/: TMultiplexedProcessor.py  TRecursive.py
lib/thriftx/aio/: TAsyncioThrift.py
lib/thriftx/aio/protocol/: TAsyncioBinaryProtocol.py  TAsyncioCompactProtocol.py
lib/thriftx/aio/transport/: TAsyncioHttpClient.py  TAsyncioTransport.py
lib/thriftx/ext/: module.cpp  protocol.tcc
lib/thriftx/protocol/: TBase.py  TBinaryProtocol.py  TCompactProtocol.py  THeaderProtocol.py  TMultiplexedProtocol.py  TProtocol.py
lib/thriftx/server/: THttpServer.py  TNonblockingServer.py  TProcessPoolServer.py  TServer.py
lib/thriftx/transport/: THeaderTransport.py  TSSLSocket.py  TTransport.py  TTwisted.py  sslcompat.py
